Fixes to sidebar, made it more responsive an added scrollbar

--- a/src/components/client/Members.css
+++ b/src/components/client/Members.css
@@ -13,6 +13,7 @@
 .pickedTeam h3 {
   display: inline;
   margin-left: 1%;
+  font-size: 18px;
 }
 
 .pickedTeam h4 {
@@ -93,11 +94,11 @@
 }
 @media only screen and (min-width: 768px){
   .picked {
-    z-index: -1;
     border-left: 1px solid grey;
     position: fixed;
     right: 0;
     top: 5rem;
-
+    overflow: scroll;
+    height: 70%;
   }
 }
